# bigchaindb-token

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-02-05-142118_create_wallets/: down.sql  up.sql
migrations/2024-02-05-160830_create_tokens/: up.sql
migrations/2024-02-06-120650_create_wallets_tokens/: down.sql  up.sql
migrations/2024-02-07-095725_create_edges_wallets/: down.sql  up.sql
src/: constant.rs  doc.rs  error.rs  lib.rs  main.rs  request.rs  response.rs  state.rs
src/config/: mod.rs
src/database/: migration.rs  mod.rs  pagination.rs  schema.rs
src/modules/: mod.rs
src/modules/edge/: dto.rs  handler.rs  mod.rs  model.rs  service.rs
src/modules/token/: dto.rs  handler.rs  mod.rs  model.rs  service.rs
src/modules/wallet/: dto.rs  handler.rs  mod.rs  model.rs  service.rs
src/modules/wallet_to_token/: model.rs  service.rs
